@@ -1,12 +1,24 @@
 # Copyright (c) 2019. TIBCO Software Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
-FROM tomcat:9.0-jre8
 
-# This Dockerfile requires the JasperReports Server WAR file installer file 
+# Tomcat official Docker Hub images are not using Oracle anymore, hence the rename
+#FROM tomcat:9.0-jre8
+
+FROM tomcat:9.0.17-jre8
+
+ENV PHANTOMJS_VERSION 	${PHANTOMJS_VERSION:-2.1.1}
+ENV DN_HOSTNAME 		${DN_HOSTNAME:-localhost.localdomain}
+ENV KS_PASSWORD 		${KS_PASSWORD:-changeit}
+ENV JRS_HTTPS_ONLY 		${JRS_HTTPS_ONLY:-false}
+ENV HTTP_PORT 			${HTTP_PORT:-8080}
+ENV HTTPS_PORT 			${HTTPS_PORT:-8443}
+ENV POSTGRES_JDBC_DRIVER_VERSION ${POSTGRES_JDBC_DRIVER_VERSION:-42.2.5}
+
+# This Dockerfile requires the JasperReports Server WAR file installer file
 # in the resources directory below the Dockerfile.
 
-# COPY the JasperReports Server WAR file installer into the image 
+# COPY the JasperReports Server WAR file installer into the image
 
 # JasperReports Server WAR file installer names for version 6.3 and prior
 # were named jasperreports-server-<version number>-bin.zip
@@ -17,7 +29,8 @@ FROM tomcat:9.0-jre8
 
 COPY resources/TIB_js-jrs_*_bin.zip /tmp/jasperserver.zip
 
-RUN echo "apt-get" && echo "nameserver 8.8.8.8" | tee /etc/resolv.conf > /dev/null && \
+RUN echo "apt-get" && \
+    echo "nameserver 8.8.8.8" | tee /etc/resolv.conf > /dev/null && \
     apt-get update > /dev/null && apt-get install -y --no-install-recommends apt-utils  > /dev/null && \
 	apt-get install -y postgresql-client mysql-client unzip xmlstarlet vim > /dev/null && \
     rm -rf /var/lib/apt/lists/* && \
@@ -55,7 +68,7 @@ RUN echo "nameserver 8.8.8.8" | tee /etc/resolv.conf > /dev/null && \
     rm -f /tmp/phantomjs.tar.bz2 && \
     mv /tmp/phantomjs*linux-x86_64 /usr/local/share/phantomjs && \
     ln -sf /usr/local/share/phantomjs/bin/phantomjs /usr/local/bin && \
-    rm -rf /tmp/*
+    rm -rf /tmp/* && \
 # In case you wish to download from a different location you can manually
 # download the archive and copy from resources/ at build time. Note that you
 # also # need to comment out the preceding RUN command
@@ -65,36 +78,24 @@ RUN echo "nameserver 8.8.8.8" | tee /etc/resolv.conf > /dev/null && \
 #    mv /tmp/phantomjs*linux-x86_64 /usr/local/share/phantomjs && \
 #    ln -sf /usr/local/share/phantomjs/bin/phantomjs /usr/local/bin && \
 #    rm -rf /tmp/*
-
-ENV POSTGRES_JDBC_DRIVER_VERSION 42.2.5
-
-RUN echo "nameserver 8.8.8.8" | tee /etc/resolv.conf > /dev/null && \
-     wget "https://jdbc.postgresql.org/download/postgresql-${POSTGRES_JDBC_DRIVER_VERSION}.jar"  \
-    -P /usr/src/jasperreports-server/buildomatic/conf_source/db/postgresql/jdbc --no-verbose
-
-# Set default Java options for Tomcat.
-# using XX:+UseG1GC - default Java GC in later versions of Java 8
-# use cool Java docker optimizations
-ENV JAVA_OPTS="-XX:MaxMetaspaceSize=378m -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
-
+    #
+    # echo "nameserver 8.8.8.8" | tee /etc/resolv.conf > /dev/null && \
+    wget "https://jdbc.postgresql.org/download/postgresql-${POSTGRES_JDBC_DRIVER_VERSION}.jar"  \
+        -P /usr/src/jasperreports-server/buildomatic/conf_source/db/postgresql/jdbc --no-verbose && \
+#
 # Configure tomcat for SSL by default with a self-signed certificate.
 # Option to set up JasperReports Server to use HTTPS only.
 #
-ENV DN_HOSTNAME=${DN_HOSTNAME:-localhost.localdomain} \
-    KS_PASSWORD=${KS_PASSWORD:-changeit} \
-    JRS_HTTPS_ONLY=${JRS_HTTPS_ONLY:-false} \
-    HTTPS_PORT=${HTTPS_PORT:-8443}
-
-RUN keytool -genkey -alias self_signed -dname "CN=${DN_HOSTNAME}" \
+    keytool -genkey -alias self_signed -dname "CN=${DN_HOSTNAME}" \
 		-storetype PKCS12 \
         -storepass "${KS_PASSWORD}" \
         -keypass "${KS_PASSWORD}" \
         -keystore /root/.keystore.p12 && \
 	keytool -list -keystore /root/.keystore.p12 -storepass "${KS_PASSWORD}" -storetype PKCS12 && \
-    xmlstarlet ed --inplace --subnode "/Server/Service" --type elem \ 
+    xmlstarlet ed --inplace --subnode "/Server/Service" --type elem \
         -n Connector -v "" --var connector-ssl '$prev' \
-    --insert '$connector-ssl' --type attr -n port -v "${HTTPS_PORT:-8443}" \
-    --insert '$connector-ssl' --type attr -n protocol -v \ 
+    --insert '$connector-ssl' --type attr -n port -v "${HTTPS_PORT}" \
+    --insert '$connector-ssl' --type attr -n protocol -v \
         "org.apache.coyote.http11.Http11NioProtocol" \
     --insert '$connector-ssl' --type attr -n maxThreads -v "150" \
     --insert '$connector-ssl' --type attr -n SSLEnabled -v "true" \
@@ -106,12 +107,12 @@ RUN keytool -genkey -alias self_signed -dname "CN=${DN_HOSTNAME}" \
         -v "${KS_PASSWORD}"\
     --insert '$connector-ssl' --type attr -n keystoreFile \
         -v "/root/.keystore.p12" \
-    ${CATALINA_HOME}/conf/server.xml 
+    ${CATALINA_HOME}/conf/server.xml
 
 # Expose ports. Note that you must do one of the following:
 # map them to local ports at container runtime via "-p 8080:8080 -p 8443:8443"
 # or use dynamic ports.
-EXPOSE 8080 ${HTTPS_PORT:-8443}
+EXPOSE ${HTTP_PORT} ${HTTPS_PORT}
 
 COPY scripts/entrypoint.sh /
 RUN chmod +x /entrypoint.sh
